Also, needed to add the 'optimist' dependency

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "main": "courier",
   "dependencies": {
-    "coffee-script": ">= 1.0.1 < 1.1.0"
+    "coffee-script": ">= 1.0.1 < 1.1.0",
+    "optimist": ">= 0.1.1"
   },
   "engines": {
     "node": ">= 0.4.2 < 0.5.0",
