--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "keywords": [
     "courier"
   ],
-  "version": "0.6.0-1",
+  "version": "0.6.1",
   "author": "feisty <courier@feisty.co> (http://feisty.co)",
   "licenses": [
     {
@@ -21,12 +21,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/forgotten-labors/courier.git",
+    "url": "git://github.com/forgotten-labors/courier.git",
     "private": "git@github.com:forgotten-labors/courier.git",
     "web": "https://github.com/forgotten-labors/courier"
   },
   "bugs": {
-    "mail": "forlab-public@mouseed.com",
+    "email": "forlab-public@mouseed.com",
     "url": "https://github.com/forgotten-labors/courier"
   },
   "bin": {
@@ -41,5 +41,6 @@
     "node": ">= 0.6 < 0.7",
     "npm": "1"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "devDependencies": {}
 }
