--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "courier",
-  "description": "package.coffee -> package.json (dynamic npm packages in CoffeeScript)",
+  "description": "npm packages in CoffeeScript (package.coffee -> package.json)",
   "keywords": [
     "courier"
   ],
-  "version": "0.6.0",
+  "version": "0.7.0",
   "author": "feisty <courier@feisty.co> (http://feisty.co)",
   "licenses": [
     {
@@ -25,7 +25,7 @@
     "web": "http://github.com/feisty/courier"
   },
   "bugs": {
-    "mail": "courier@feistystudios.com",
+    "mail": "courier@feisty.co",
     "web": "http://github.com/feisty/courier/issues"
   },
   "bin": {
@@ -33,12 +33,12 @@
   },
   "main": "courier",
   "dependencies": {
-    "coffee-script": ">= 1.1.1 < 1.2",
-    "optimist": ">= 0.2.4 < 0.3"
+    "coffee-script": "~1.3.1",
+    "optimist": "~0.3"
   },
   "engines": {
-    "node": ">= 0.4.9 < 0.5",
-    "npm": ">= 1.0.15 < 1.1"
+    "node": "~0.6",
+    "npm": "~1.1"
   },
   "preferGlobal": true
 }
