--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "fl-courier",
-  "description": "package.coffee -> package.json (dynamic npm packages in CoffeeScript)",
+  "description": "npm packages in CoffeeScript (package.coffee -> package.json)",
   "keywords": [
-    "courier"
+    "courier",
+    "coffee",
+    "npm",
+    "package",
+    "json"
   ],
-  "version": "0.6.1",
-  "author": "feisty <courier@feisty.co> (http://feisty.co)",
+  "version": "0.8.0",
+  "author": "feisty <courier@feisty.io> (http://feisty.io)",
   "licenses": [
     {
       "type": "FEISTY",
@@ -13,7 +17,7 @@
     }
   ],
   "contributors": [
-    "Nicholas Kinsey <pyro@feisty.co>",
+    "Nicholas Kinsey <pyro@feisty.io>",
     "Isaac Z. Schlueter <i@izs.me>",
     "Mathieu Ravaux <mathieu.ravaux@gmail.com>",
     "Jacob Evans <jacob@dekz.net>",
@@ -29,17 +33,16 @@
     "email": "forlab-public@mouseed.com",
     "url": "https://github.com/forgotten-labors/courier"
   },
-  "bin": {
-    "courier": "./bin/courier"
-  },
-  "main": "courier",
+  "bin": "./bin/courier",
+  "main": "courier.coffee",
   "dependencies": {
-    "coffee-script": ">= 1.1.1 <=1.2",
-    "optimist": ">= 0.2.4 < 0.3"
+    "coffee-script": "~1.6.3",
+    "optimist": "~0.5.2",
+    "pkginfo": "~0.3.0"
   },
   "engines": {
-    "node": ">= 0.6 < 0.7",
-    "npm": "1"
+    "node": "~0.10.10",
+    "npm": "~1.2.25"
   },
   "preferGlobal": true,
   "devDependencies": {}
